fixed issue when hover delay is too small

--- a/popup.css
+++ b/popup.css
@@ -16,6 +16,7 @@ html {
     font-weight: bold;
     font-size: 10pt;
     margin-bottom: 5px;
+    user-select: none;
 }
 
 .optionContainer input {
