--- a/preview.css
+++ b/preview.css
@@ -27,8 +27,8 @@
     width: 100%;
     max-height: 135px;
     overflow: hidden;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
     user-select: none;
     -webkit-user-drag: none;
 }
